k8s/spring-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
spec:
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
      - name: spring-app
        image: tfacr.azurecr.io/springapp:latest
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: config-volume
            mountPath: /config

      volumes:
      - name: config-volume
        configMap:
          name: spring-app-config
