k8s/spring-service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-app-service
spec:
  type: NodePort
  selector:
    app: spring-app
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
